...
                <Controller
                  control={control}
                  name="email"
                  render={({ field: { onChange, onBlur, value } }) => (
                    <Input
                      aria-labelledby="email"
                      testID="email-input"
                      placeholder={LOGIN_LABELS.emailPlaceholder}
                      keyboardType="email-address"
                      autoCapitalize="none"
                      autoComplete="email"
                      value={value}
                      onChangeText={onChange}
...
                <Controller
                  control={control}
                  name="password"
                  render={({ field: { onChange, onBlur, value } }) => (
                    <Input
                      aria-labelledby="password"
                      testID="password-input"
                      placeholder="••••••••"
                      secureTextEntry
                      autoCapitalize="none"
                      value={value}
                      onChangeText={onChange}
                      onBlur={onBlur}
...
